# todo-fastapi-k8s

./: .gitignore  Dockerfile  README.md  cluster-config.yml  deployment.yaml  pyproject.toml  requirements.txt  service.yaml  todo.db
.coverage/: coverage-data
.github/workflows/: python-tests.yml
elk-b/: .env  docker-compose.yml  filebeat.yml  logstash.conf  logstash.template.json
elk-b3/: docker-compose.yml  filebeat.yml  logstash.conf
src/: database.py  log.py  main.py
src/crud/: todo.py
src/models/: todo.py
src/routers/: todo.py
src/schemas/: todo.py
tests/: conftest.py  todo_test.py
todo-fastapi-k8s/: Chart.yaml  values.yaml
todo-fastapi-k8s/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
todo-fastapi-k8s/templates/tests/: test-connection.yaml
